# fx-calendar-bot

./: .gitignore.txt  README.md  pyproject.toml
.aws-sam/pipeline/: pipelineconfig.toml
.github/workflows/: pipeline.yaml
lambdas/: fetch_and_load.py
tests/: test_fx_calendar_bot.py
