[tool.poetry]
name = "fx-calendar-bot"
version = "0.1.0"
description = ""
authors = ["Rudy Selman <rudysemail@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
aws-sam-cli = "^1.37.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
